# SlicerTorchIO

./: CMakeLists.txt  README.md  TorchIO.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  questions_help_support.md
Screenshots/Icon/: script.py
TorchIO/: CMakeLists.txt  TorchIO.py
TorchIO/transforms/: RandomGhosting.py  RandomSpike.py  Transform.py  __init__.py
TorchIOModule/: CMakeLists.txt  TorchIOModule.py
TorchIOTransforms/: CMakeLists.txt  TorchIOTransforms.py
TorchIOTransforms/TorchIOTransformsLib/: HistogramStandardization.py  RandomAffine.py  RandomAnisotropy.py  RandomBiasField.py  RandomBlur.py  RandomGamma.py  RandomGhosting.py  RandomMotion.py  RandomSpike.py  RescaleIntensity.py  Transform.py  __init__.py
TorchIOTransforms/transforms/: RandomDownsample.py  RandomGhosting.py  Transform.py  __init__.py
transforms/: CoordinatesWidget.py  HistogramStandardization.py  RandomAffine.py  RandomBiasField.py  RandomElasticDeformation.py  RandomMotion.py  Transform.py  __init__.py
